--- a/init.org
+++ b/init.org
@@ -1112,6 +1112,14 @@ Lambda prompt
   :custom (eshell-highlight-prompt nil)
 	        (eshell-prompt-function 'epe-theme-lambda))
 #+end_src
+
+Syntax highlighting
+#+begin_src elisp
+(use-package eshell-syntax-highlighting
+  :straight t
+  :config
+  (eshell-syntax-highlighting-global-mode 1))
+#+end_src
 ** Magit
 The git supercharge
 
