Frame settings, reddigg, some bindings

--- a/init.org
+++ b/init.org
@@ -70,6 +70,7 @@
     - [[#automatic-toggle-of-latex-previews][Automatic toggle of latex previews]]
     - [[#org-tree-slide][Org tree slide]]
     - [[#org-cv][Org CV]]
+    - [[#org-reddit-viewer][Org reddit viewer]]
   - [[#evil-mode][Evil-mode]]
     - [[#evil-mode-configs][Evil mode configs]]
     - [[#org-mode-integration-with-evil][Org mode integration with evil]]
@@ -272,6 +273,7 @@ General keybindings
 *** Start emacs in fullscreen, happens when everything is loaded.
 #+begin_src elisp
 (add-to-list 'default-frame-alist '(fullscreen . maximized))
+(add-to-list 'default-frame-alist '(cursor-color . "palegoldenrod"))
 #+end_src
 *** Set the emacs user directory for re-use in other places
 #+begin_src elisp
@@ -308,10 +310,11 @@ General keybindings
 *** Set the default font
 This is seriously retarded.
 #+begin_src elisp
-(if (eq system-type 'gnu/linux)
-  ;;(set-frame-font "Jet Brains Mono 18")
-  (set-frame-font "mononoki Nerd Font Mono 18")
-  (set-frame-font "JetBrains Mono 18"))
+(add-to-list 'default-frame-alist '(font . "mononoki Nerd Font Mono 18"))
+;; (if (eq system-type 'gnu/linux)
+;;   ;;(set-frame-font "Jet Brains Mono 18")
+;;   (set-frame-font "mononoki Nerd Font Mono 18")
+;;   (set-frame-font "JetBrains Mono 18"))
 #+end_src
 
 #+RESULTS:
@@ -485,7 +488,13 @@ icons showing!
   :init (doom-modeline-mode 1)
   :config
   ;; Whether display the mu4e notifications. It requires `mu4e-alert' package.
-  (setq doom-modeline-mu4e t))
+  (setq doom-modeline-mu4e t)
+
+  (defun enable-doom-modeline-icons (_frame)
+    (setq doom-modeline-icon t))
+
+  (add-hook 'after-make-frame-functions
+            #'enable-doom-modeline-icons))
 #+end_src
 ** Dashboard
 Ok I admit this is a little bloated, but I like something pretty to open when I turn on Emacs.
@@ -538,6 +547,8 @@ Dependency of the org-colored-text file
     "or"   'org-refile
     "os"   'org-archive-hierarchically
     "og"   'counsel-org-goto
+
+    "oo"   'org-open-at-point
 
     "ot" '(:ignore t :which-key "timestamp")
     "otu" 'org-timestamp-up-day
@@ -1036,6 +1047,16 @@ For simpler presentation in org files
   :init (require 'ox-altacv)
   :config
   (setq org-latex-compiler "lualatex"))
+#+end_src
+*** Org reddit viewer
+#+begin_src elisp
+(use-package reddigg
+  :straight (:host github :repo "thanhvg/emacs-reddigg" :branch "master")
+  :config
+  (setq reddigg-subs '(haskell scala orgmode emacs ukulele))
+  (my/leader-keys
+    "ovm" 'reddigg-view-main
+    "ovs" 'reddigg-view-sub))
 #+end_src
 ** Evil-mode
 Vim keybinds and goodness in emacs
@@ -1866,6 +1887,7 @@ For using direnv inside emacs.
                         '(:key "SPC o c o" :description "Clock out of task")
                         '(:key "SPC o c l" :description "Clock into last clocked task")
                         '(:key "SPC o c g" :description "Go to currently clocked task")
+                        '(:key "SPC o o"   :description "Org open link at point")
                         '(:key "SPC o g"   :description "Search through headings in an org file")
                         '(:key "SPC o d"   :description "Decrypt org file")
                         '(:key "SPC o r"   :description "Refile heading in org file")
@@ -1880,6 +1902,8 @@ For using direnv inside emacs.
                         '(:key "SPC o t u" :description "Bump up org timestamp by a day")
                         '(:key "SPC o t d" :description "Down org timestamp by a day")
                         '(:key "SPC o t l" :description "Toggle link display in org mode (shows what stuff is linked to)")
+                        '(:key "SPC o v m" :description "Open custom reddit reddigg main screen")
+                        '(:key "SPC o v s" :description "Open specific sub reddit with reddigg")
                         '(:key "SPC n f"   :description "Find a file in org roam")
                         '(:key "SPC n i"   :description "Insert a link to a file in an org roam file and open it. Creates a backlink")
                         '(:key "SPC n I"   :description "Insert a link to a new file in an org roam file but don't open it. Creates a backlink")
