--- a/init.org
+++ b/init.org
@@ -661,6 +661,16 @@ Disable line numbers in org-mode
 #+end_src
 *** Capture templates
 #+begin_src elisp
+;; inspiration - https://stackoverflow.com/a/53738442
+;; Currently will keep files even if I abort the capture, but CBA to fix that now
+(defun my/create-notes-file (&optional path)
+  "Create an org file in ~/zettelkasten/."
+  (interactive)
+  (setq my-org-note--name (read-string "Filename: "))
+  (expand-file-name (format "%s.org"
+                    (s-downcase (replace-regexp-in-string "[?,'|;\s]" "_" my-org-note--name)))
+                    (if path path "~zettelkasten")))
+
 (use-package org-capture
   :after org
   :config
@@ -669,7 +679,19 @@ Disable line numbers in org-mode
     "occ"  'org-capture)
   ;; quick templates for org files
   (setq org-capture-templates
-    '(("t" "Todo [inbox]" entry
+    '(("s" "Stream note" entry
+      (file (lambda () (my/create-notes-file "~/zettelkasten/stream")))
+      (file "~/Nextcloud/org/templates/neuron_stream_note.org"))
+      ("p" "Permanent note" entry
+      (file my/create-notes-file)
+      (file "~/Nextcloud/org/templates/neuron_permanent_note.org"))
+      ("r" "Resource note" entry
+      (file my/create-notes-file)
+      (file "~/Nextcloud/org/templates/neuron_resource_note.org"))
+      ("l" "Literature note" entry
+      (file my/create-notes-file)
+      (file "~/Nextcloud/org/templates/neuron_literature_note.org"))
+      ("t" "Todo [inbox]" entry
       (file+headline "~/Nextcloud/Orgzly/inbox.org" "Tasks")
       "* TODO %i%? \n SCHEDULED: %t")
       ("T" "Tickler" entry
@@ -688,6 +710,10 @@ Disable line numbers in org-mode
       ("m" "Monthly review" entry (file+olp+datetree "~/Nextcloud/org/monthly_reviews.org")
       (file "~/Nextcloud/org/templates/monthly_review.org")))))
 #+end_src
+
+#+RESULTS:
+: t
+
 *** Agenda
 #+begin_src elisp
 (use-package org-agenda
