--- a/init.org
+++ b/init.org
@@ -669,7 +669,7 @@ Disable line numbers in org-mode
   (setq my-org-note--name (read-string "Filename: "))
   (expand-file-name (format "%s.org"
                     (s-downcase (replace-regexp-in-string "[?,'|;\s]" "_" my-org-note--name)))
-                    (if path path "~zettelkasten")))
+                    (if path path "~/zettelkasten")))
 
 (use-package org-capture
   :after org
@@ -710,10 +710,6 @@ Disable line numbers in org-mode
       ("m" "Monthly review" entry (file+olp+datetree "~/Nextcloud/org/monthly_reviews.org")
       (file "~/Nextcloud/org/templates/monthly_review.org")))))
 #+end_src
-
-#+RESULTS:
-: t
-
 *** Agenda
 #+begin_src elisp
 (use-package org-agenda
