Note on org reschedule

--- a/init.org
+++ b/init.org
@@ -595,7 +595,7 @@ Dependency of the org-colored-text file
         org-habit-following-days 7)
 
   ;; log when an item is rescheduled
-  (setq org-log-reschedule (quote time))
+  (setq org-log-reschedule (quote note))
 
   ;; some safeguards against accidentally deleting entire sections of an org file
   (setq org-catch-invisible-edits 'smart)
