--- a/init.org
+++ b/init.org
@@ -749,11 +749,10 @@ Disable line numbers in org-mode
   ;; Keybindings
   (my/leader-keys
     "oc"   '(:ignore t :which-key "org-clock")
-    "oci"  'org-clock-in
+    ;;"oci"  'org-clock-in
     "oco"  'org-clock-out
     "ocl"  'org-clock-in-last
-    "ocr"  'org-clock-report
-    "ocg"  'org-clock-goto)
+    "ocr"  'org-clock-report)
   ;; Resume clocking task when emacs is restarted
   (org-clock-persistence-insinuate)
   ;; Save the running clock and all clock history when exiting Emacs, load it on startup
@@ -780,11 +779,25 @@ Disable line numbers in org-mode
 #+end_src
 
 Export clock entries to csv
-Use ~org-clock-csv-to-file~ to export all entries in org agenda files to a csv file chosen by you.
+Use =org-clock-csv-to-file= to export all entries in org agenda files to a csv file chosen by you.
 
 #+begin_src elisp
 (use-package org-clock-csv
   :straight t)
+#+end_src
+
+Some better clocking history
+
+#+begin_src elisp
+(use-package org-mru-clock
+  :straight t
+  :config
+  (setq org-mru-clock-how-many 100)
+  (setq org-mru-clock-completing-read #'ivy-completing-read)
+
+  (my/leader-keys
+    "oci"  'org-mru-clock-in
+    "ocg"  'org-mru-clock-goto))
 #+end_src
 *** Org-roam
 The notes (zettelkasten) god
