Add functions for custom agenda views

--- a/init.org
+++ b/init.org
@@ -727,12 +727,36 @@ Disable line numbers in org-mode
     "~/Nextcloud/Orgzly/inbox.org"
     "~/Nextcloud/Orgzly/hobbies.org"
     "~/Nextcloud/org/work/work.org"
+    "~/Nextcloud/org/work/storepick/slacker"
     "~/Nextcloud/org/reading_list.org"
     "~/Nextcloud/org-roam/20210214211549-reading_inbox.org"
     "~/Nextcloud/org-roam/20210215222848-archive.org"))
 
   ;; show logs during the day - closed tasks and times, clocks
-  (setq org-agenda-start-with-log-mode t))
+  (setq org-agenda-start-with-log-mode t)
+
+  (use-package with-simulated-input
+    :straight t)
+
+  (defun org-work-agenda ()
+    (interactive)
+    (progn
+      (org-agenda nil "a")
+      (org-agenda-day-view)
+      (with-simulated-input "-hobbies-tickler-gtd-inbox RET"
+        (org-agenda-filter))))
+
+  (defun org-home-agenda ()
+    (interactive)
+    (progn
+      (org-agenda nil "a")
+      (org-agenda-day-view)
+      (with-simulated-input "+hobbies+tickler+gtd+inbox RET"
+        (org-agenda-filter))))
+
+  (my/leader-keys
+    "wa" 'org-work-agenda
+    "ha" 'org-home-agenda))
 #+end_src
 *** Refiling
 #+begin_src elisp
@@ -1884,13 +1908,13 @@ Elfeed dashboard similar to mu4e one.
 Adding fancy icons to dired items because why not.
 Disabled until https://github.com/wyuenho/all-the-icons-dired/issues/4 has a resolution.
 #+begin_src elisp
-(use-package all-the-icons-dired
-  :straight t
-  :hook (dired-mode . all-the-icons-dired-mode)
-  :config
-  (setq dired-auto-revert-buffer t)
-  (setq dired-dwim-target t)
-  (setq dired-listing-switches "-lah"))
+;; (use-package all-the-icons-dired
+;;   :straight t
+;;   :hook (dired-mode . all-the-icons-dired-mode)
+;;   :config
+;;   (setq dired-auto-revert-buffer t)
+;;   (setq dired-dwim-target t)
+;;   (setq dired-listing-switches "-lah"))
 #+end_src
 
 Open some files with external applications.
