Random quote, rg search in org dir

--- a/init.org
+++ b/init.org
@@ -44,6 +44,7 @@
     - [[#set-warning-level-to-error][Set warning level to error]]
   - [[#terminal-emulator][Terminal emulator]]
   - [[#modeline][Modeline]]
+  - [[#random-quote-for-dashboard][Random quote for dashboard]]
   - [[#dashboard][Dashboard]]
   - [[#org-mode][Org-mode]]
     - [[#general][General]]
@@ -74,6 +75,7 @@
     - [[#org-cv][Org CV]]
     - [[#org-reddit-viewer][Org reddit viewer]]
     - [[#org-recur][Org recur]]
+    - [[#searching-through-org-files][Searching through org files]]
   - [[#evil-mode][Evil-mode]]
     - [[#evil-mode-configs][Evil mode configs]]
     - [[#org-mode-integration-with-evil][Org mode integration with evil]]
@@ -127,6 +129,7 @@
   - [[#snippets-1][Snippets]]
   - [[#crux][Crux]]
   - [[#neuron-mode][Neuron mode]]
+  - [[#ripgrep][Ripgrep]]
 
 ** Package manager
 Must be in the beginning for ~use-package~ usage below.
@@ -514,6 +517,41 @@ icons showing!
   (add-hook 'after-make-frame-functions
             #'enable-doom-modeline-icons))
 #+end_src
+** Random quote for dashboard
+#+begin_src elisp
+(defvar quotes-file (concat user-emacs-directory "/quotes.txt")
+  "File to lookup quotes.")
+
+(defvar quotes-file-separator-regex "\n%\n"
+  "Delimiter for seperating the line in `quotes-file'.")
+
+(defvar quotes-author-regex "^--"
+  "Regex for getting the author of the quote.
+
+Anything after this will be changed to face `font-lock-comment-face'.")
+
+(defun get-quote (&optional nth)
+  "Get a random quote from `quotes-file'.
+
+Optionally get the NTH quote."
+  (let* ((quotes (split-string
+                  (with-temp-buffer
+                    (insert-file-contents quotes-file)
+                    (buffer-substring-no-properties
+                     (point-min)
+                     (point-max)))
+                  quotes-file-separator-regex t))
+         (selected-quote (nth (or nth
+                                  (random (length quotes)))
+                              quotes)))
+    (put-text-property
+     (string-match quotes-author-regex selected-quote)
+     (length selected-quote)
+     'face
+     'font-lock-comment-face
+     selected-quote)
+    selected-quote))
+#+end_src
 ** Dashboard
 Ok I admit this is a little bloated, but I like something pretty to open when I turn on Emacs.
 #+begin_src elisp
@@ -522,6 +560,7 @@ Ok I admit this is a little bloated, but I like something pretty to open when I 
   :config
   (setq dashboard-items '((recents  . 5)
                           (projects . 5)))
+  (setq dashboard-banner-logo-title (get-quote))
   (dashboard-setup-startup-hook))
 #+end_src
 
@@ -580,6 +619,7 @@ Dependency of the org-colored-text file
     "my" 'org-todo-yesterday
     "ms" 'org-schedule
     "md" 'org-deadline)
+  (setq org-directory "~/Nextcloud/org")
   ;; TODO keywords that I use - the ones after the | are the done states
   (setq org-todo-keywords '((sequence "TODO(t)" "WAITING(w)" "NEXT(n)" "|" "DONE(d)" "CANCELLED(c)")))
 
@@ -1175,6 +1215,16 @@ For simpler presentation in org files
 
   (setq org-recur-finish-done t
         org-recur-finish-archive t))
+#+end_src
+*** Searching through org files
+#+begin_src elisp
+(defun org-rg (query)
+  (interactive "MSearch Org files for: ")
+  (rg query "org" org-directory)
+  (select-window (get-buffer-window "*rg*")))
+
+(my/leader-keys
+  "ob" 'org-rg)
 #+end_src
 ** Evil-mode
 Vim keybinds and goodness in emacs
@@ -2185,3 +2235,9 @@ or something.
 #+end_src
 
 #+RESULTS:
+
+** Ripgrep
+#+begin_src elisp
+(use-package rg
+  :straight t)
+#+end_src
