Search in all org files

--- a/init.org
+++ b/init.org
@@ -1220,7 +1220,7 @@ For simpler presentation in org files
 #+begin_src elisp
 (defun org-rg (query)
   (interactive "MSearch Org files for: ")
-  (rg query "org" org-directory)
+  (rg query "org" "~/Nextcloud")
   (select-window (get-buffer-window "*rg*")))
 
 (my/leader-keys
